# layers

./: .gitignore  .prettierignore  CHANGELOG.md  Cargo.toml  Dockerfile  LICENSE  README.md  docker-compose.service-pds.yml  docker-compose.yml  eslint.config.mjs  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.config.json  tsconfig.json  validate-lexicons.mjs  vitest.compliance.config.ts  vitest.config.ts  vitest.pre-deployment.config.ts  vitest.unit.config.ts
.github/ISSUE_TEMPLATE/: registry-proposal.yml
.github/workflows/: appview-deploy.yml  chromatic.yml  ci.yml  deploy.yml  lexicon-gate.yml  performance.yml
codegen/: check-breaking.mjs  emit-sql.mjs  extract-row-configs.mjs  extract-storage-specs.mjs  generate.mjs  record-configs.json
codegen/baseline/: pub.layers.alignment.alignment.json  pub.layers.annotation.annotationLayer.json  pub.layers.annotation.clusterSet.json  pub.layers.changelog.entry.json  pub.layers.corpus.corpus.json  pub.layers.corpus.membership.json  pub.layers.eprint.dataLink.json  pub.layers.eprint.eprint.json  pub.layers.expression.expression.json  pub.layers.graph.graphEdge.json  pub.layers.graph.graphEdgeSet.json  pub.layers.graph.graphNode.json  pub.layers.judgment.agreementReport.json  pub.layers.judgment.experimentDef.json  pub.layers.judgment.judgmentSet.json  pub.layers.media.media.json  pub.layers.ontology.ontology.json  pub.layers.ontology.typeDef.json  pub.layers.persona.persona.json  pub.layers.resource.collection.json  pub.layers.resource.collectionMembership.json  pub.layers.resource.entry.json  pub.layers.resource.filling.json  pub.layers.resource.template.json  pub.layers.resource.templateComposition.json  pub.layers.segmentation.segmentation.json
crates/layers-auth/: Cargo.toml
crates/layers-auth/src/: did.rs  jwt.rs  lib.rs  scope.rs  sign.rs  verify.rs
crates/layers-auth/tests/: did_resolver_cache.rs  jwt_did_plc.rs  jwt_did_web.rs
crates/layers-codegen/: Cargo.toml
crates/layers-codegen/src/: fields.rs  lenses.rs  lexicon_jsonschema.rs  main.rs  tables.rs
crates/layers-codegen/src/frontend/: forms.rs  fragments.rs  lenses.rs  mod.rs  mutations.rs  queries.rs  registry.rs  schema.rs  ts.rs  views.rs
crates/layers-codegen/src/seed/: client.rs  fingerprint.rs  mod.rs  model.rs  publish.rs  resolve.rs  stamp.rs
crates/layers-codegen/tests/: openapi_artifact.rs
crates/layers-indexer/: Cargo.toml
crates/layers-indexer/src/: foreign.rs  handler.rs  health.rs  lib.rs
crates/layers-indexer/tests/: foreign_pipeline.rs  health.rs  jetstream_pipeline.rs  record_tables.rs
crates/layers-observer/: Cargo.toml
crates/layers-observer/src/: lib.rs  methods.rs  publisher.rs  scheduler.rs  sources.rs
crates/layers-observer/tests/: scheduler.rs
crates/layers-orchestrator/: Cargo.toml
crates/layers-orchestrator/src/: auth.rs  error.rs  generated_routes.rs  import.rs  lib.rs  metrics.rs  oauth.rs  queries.rs  rate_limit.rs  router.rs  state.rs
crates/layers-orchestrator/src/lens/: loader.rs  mod.rs
crates/layers-orchestrator/tests/: end_to_end.rs  filtered_list.rs  import_external.rs  lens.rs  metrics.rs  oauth_metadata.rs  router.rs
crates/layers-records/: Cargo.toml
crates/layers-records/src/: fields.rs  lib.rs  tables.rs
crates/layers-storage/: Cargo.toml
crates/layers-storage/src/: cursor.rs  elastic.rs  external.rs  lib.rs  multi.rs  neo4j.rs  postgres.rs  rate_limit.rs  redis_cache.rs  service_pds.rs  sink.rs
crates/layers-storage/tests/: rate_limit.rs
crates/layers-verify/: Cargo.toml
crates/layers-verify/src/: corpus.rs  lib.rs  roundtrip.rs
docker/: docker-compose.yml
docs/: docusaurus.config.ts  package-lock.json  package.json  sidebars.ts
docs/docs/: foundations.md  introduction.md  lexicon-overview.md
docs/static/: CNAME
k8s/argocd/: application.yaml  project.yaml
k8s/base/: api-service.yaml  (+6 more)
lenses/: pub.layers.alignment.alignment.lens.json  pub.layers.annotation.annotationLayer.lens.json  pub.layers.annotation.clusterSet.lens.json  pub.layers.changelog.entry.lens.json  pub.layers.corpus.corpus.lens.json  pub.layers.corpus.membership.lens.json  pub.layers.eprint.dataLink.lens.json  pub.layers.eprint.eprint.lens.json  pub.layers.expression.expression.lens.json  pub.layers.graph.graphEdge.lens.json  pub.layers.graph.graphEdgeSet.lens.json  pub.layers.graph.graphNode.lens.json  pub.layers.judgment.agreementReport.lens.json  pub.layers.judgment.experimentDef.lens.json  pub.layers.judgment.judgmentSet.lens.json  pub.layers.media.media.lens.json  pub.layers.ontology.ontology.lens.json  pub.layers.ontology.typeDef.lens.json  pub.layers.persona.persona.lens.json  pub.layers.resource.collection.lens.json  pub.layers.resource.collectionMembership.lens.json  pub.layers.resource.entry.lens.json  pub.layers.resource.filling.lens.json  pub.layers.resource.template.lens.json  pub.layers.resource.templateComposition.lens.json  pub.layers.segmentation.segmentation.lens.json
lexicons/: .gitignore
migrations/: 0001_firehose_cursors.sql  0002_record_tables.sql  0003_external_records.sql
notes/: atproto-permission-sets.md  service-pds.md
observer-spec/: methods.json
orchestrator-spec/: queries.json
scripts/: _seed-demo-corpus.py  bootstrap-pds.mjs  bootstrap-service-pds.mjs  convert-external-resources.py  dev.sh  publish-permission-sets.mjs
sidecar/: Dockerfile  pyproject.toml
sidecar/sidecar/: __init__.py  config.py  main.py
sidecar/sidecar/adapters/: __init__.py  base.py  framenet.py  propbank.py  ud.py  unimorph.py  verbnet.py  wordnet.py
sidecar/sidecar/models/: __init__.py  filling.py  preview.py  query.py
sidecar/sidecar/routers/: __init__.py  filling.py  preview.py  resources.py
sidecar/sidecar/services/: __init__.py  csp_solver.py  jspsych_generator.py  mlm_filler.py
src/: index.ts  indexer.ts
verify-spec/: runners.json
web/: .env.example  .gitignore  chromatic.config.json  eslint.config.mjs  instrumentation.ts  next.config.ts  package.json  playwright-ct.config.ts  playwright.config.ts  pnpm-lock.yaml  tailwind.config.ts  tsconfig.json  vitest.config.ts
(+1238 files in other folders)
