[project]
name = "layers-sidecar"
version = "0.1.0"
description = "Python sidecar for Layers design section: resource queries, CSP solving, MLM filling, jsPsych preview"
requires-python = ">=3.12"
license = "MIT"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "pydantic-settings>=2.7",
    "nltk>=3.9",
    "python-constraint>=1.4",
    "conllu>=5.0",
]

[project.optional-dependencies]
ml = ["transformers>=4.48", "torch>=2.5"]
dev = ["pytest>=8", "httpx>=0.28", "pytest-asyncio>=0.25", "ruff>=0.9"]

[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
