[package]
name = "layers-observer"
description = "Optional firehose-to-observation daemon for Layers. Folds pub.layers.* records into aggregate observations (annotation coverage, inter-annotator agreement, corpus growth) using idiolect-observer's ObservationMethod interface."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
publish = false

[lints]
workspace = true

[[bin]]
name = "layers-observer"
path = "src/bin/layers_observer.rs"

[dependencies]
layers-records = { path = "../layers-records" }
layers-storage = { path = "../layers-storage", default-features = false, features = ["postgres"] }

idiolect-observer = { workspace = true }
idiolect-records  = { workspace = true }

serde      = { workspace = true }
serde_json = { workspace = true }
thiserror  = { workspace = true }
tokio      = { workspace = true, features = ["macros", "rt-multi-thread", "signal", "time"] }
tracing    = { workspace = true }
anyhow     = { workspace = true }
tracing-subscriber = { workspace = true }
sqlx       = { workspace = true }
time       = { workspace = true }
async-trait = { workspace = true }
reqwest    = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt", "rt-multi-thread", "test-util", "time"] }
testcontainers = { workspace = true }
testcontainers-modules = { workspace = true }
async-trait = { workspace = true }
sqlx = { workspace = true }
serde_json = { workspace = true }
